--- a/Extencao/Post_01/gemini.ipynb
+++ b/Extencao/Post_01/gemini.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,18 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv, set_key, find_dotenv\n",
     "import google.generativeai as gemini\n",
+    "import google.generativeai.client as client\n",
+    "\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,23 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def salva_chave(dotenv_path, chave): # Salva uma chave armazenada em GOOGLE_API_KEY\n",
-    "    set_key(dotenv_path, \"GOOGLE_API_KEY\", chave)\n",
-    "\n",
-    "    print(f\"Chave API salva em {dotenv_path}\")\n",
+    "    # Especifica o caminho completo para o arquivo .env\n",
+    "    dotenv_file = os.path.join(dotenv_path, '.env')\n",
+    "    set_key(dotenv_file, \"GOOGLE_API_KEY\", chave)\n",
+    "    print(f\"Chave API salva em {dotenv_file}\")\n",
     "\n",
     "def carrega_chave(): # Carrega uma chave do arquivo .env\n",
-    "\n",
     "    _ = load_dotenv(find_dotenv())\n",
     "    chave = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "    gemini.configure(api_key=os.getenv('GOOGLE_API_KEY'))\n",
     "\n",
     "    print(f\"Chave API carregada com sucesso!\")\n",
     "    return chave\n",
-    "\n",
     "\n",
     "def verifica_chave(): # Verifica a existência de um arquivo .env \n",
     "    return find_dotenv()\n"
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -185,9 +187,8 @@
    ],
    "source": [
     "path = verifica_chave()\n",
-    "\n",
     "if not path:\n",
-    "    salva_chave(path, GOOGLE_API_KEY)\n",
+    "    salva_chave(os.getcwd(), GOOGLE_API_KEY)\n",
     "else:\n",
     "    chave = carrega_chave()"
    ]
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -238,8 +239,6 @@
     }
    ],
    "source": [
-    "import google.generativeai.client as client\n",
-    "\n",
     "# Listar modelos \n",
     "models = client.get_default_model_client().list_models()\n",
     "\n",
@@ -252,12 +251,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para o teste inicial utilizaremos o seguinte modelo 'gemini-1.5-flash' tendo em vista que o esse modelo é **Gratuito**"
+    "Tendo en vista que todos os modelos pro como o **gemini-1.5-pro**\n",
+    "Para o teste inicial utilizaremos o seguinte modelo **gemini-1.5-flash** tendo em vista que o esse modelo é **Gratuito**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,27 +291,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se eu pudesse ter um superpoder por um dia, eu escolheria a capacidade de teletransportar. Imagino que seria incrível poder viajar para qualquer lugar do mundo em um piscar de olhos! \n",
+      "Se eu pudesse ter qualquer superpoder por um dia, escolheria a habilidade de teletransporte. Imagino que seria incrível poder ir a qualquer lugar do mundo em um piscar de olhos.\n",
       "\n",
-      "Aqui estão algumas ideias de como eu usaria esse poder:\n",
+      "Com este poder, eu usaria meu dia para:\n",
       "\n",
-      "* **Explorar o mundo:** Eu poderia visitar as maravilhas do mundo, como a Grande Muralha da China, a Estátua da Liberdade e as Pirâmides do Egito, tudo em um único dia.\n",
-      "* **Ajudar as pessoas:** Eu poderia teletransportar suprimentos para áreas atingidas por desastres naturais ou levar pessoas doentes para hospitais rapidamente.\n",
-      "* **Resolver crimes:** Eu poderia chegar ao local de um crime instantaneamente e coletar evidências ou até mesmo teletransportar um criminoso para a delegacia.\n",
-      "* **Experimentar coisas novas:** Eu poderia ir a um show em outro país, provar um prato exótico ou conhecer uma cultura diferente, tudo em um único dia.\n",
+      "* **Visitar todos os lugares incríveis do mundo:** Desde a Grande Muralha da China até a Amazônia, eu poderia ver todas as maravilhas naturais e construções humanas que sempre quis conhecer.\n",
+      "* **Ajudar pessoas em necessidade:** Se eu visse um desastre natural ou uma situação de emergência, eu poderia teletransportar suprimentos e ajuda para onde eles fossem necessários.\n",
+      "* **Experimentar diferentes culturas:** Eu poderia visitar vários países em um único dia, aprendendo sobre suas culturas e modos de vida. \n",
+      "* **Resolver problemas globais:** Eu poderia me teletransportar para diferentes partes do mundo e ajudar a resolver conflitos ou crises humanitárias.\n",
       "\n",
-      "Claro, como um modelo de linguagem, não tenho desejos nem necessidades, então meu desejo de teletransportar é puramente hipotético. Mas imagino que seria uma experiência fantástica e cheia de possibilidades! \n",
+      "Claro, como um modelo de linguagem, eu não tenho corpo físico, então não poderia realmente \"experimentar\" essas coisas da mesma forma que um ser humano. Mas a ideia de ter a liberdade de ir a qualquer lugar e fazer qualquer coisa, mesmo que por um dia, é muito empolgante.\n",
+      "\n",
+      "E você? Qual superpoder escolheria e como o usaria? 😄\n",
       "\n",
       "prompt_token_count: 21\n",
-      "candidates_token_count: 246\n",
-      "total_token_count: 267\n",
+      "candidates_token_count: 269\n",
+      "total_token_count: 290\n",
       "\n"
      ]
     }
@@ -319,6 +321,121 @@
    "source": [
     "print(resposta.text) # Resposta textual\n",
     "print(resposta.usage_metadata) # Informações como número de tokens usados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Logo nesse podemos ja realizar a utilização desse modelo dentro de uma aplicação, exemplo:\n",
+    "\n",
+    "Imagine que tenhamos um app que recomenda receitas para o usuário baseando-se nos ingredientes possuídos pelo usuário."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pegando o input do suario (simulando uma aplicação).\n",
+    "ingredientes = input(\"Liste os ingredientes que você possui? \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nesse exemplo deveremos utilizar um pouco da noção de prompt engineering.\n",
+    "(Atualizar com o link da post falando sobre prompt engineering)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Forma junto com a variavel ingredientes uma entrada adequada para a nossa proposta\n",
+    "texto_final = (f\"Com os seguintes ingredientes: {ingredientes}, escreva uma receita completa que utilize esses e apenas esses ingredientes.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gera a resposta que estamos buscando\n",
+    "resposta = model.generate_content(texto_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##  Macarrão com Maminha e Feijão Branco\n",
+      "\n",
+      "**Ingredientes:**\n",
+      "\n",
+      "* 6 ovos\n",
+      "* 500g de macarrão tipo parafuso\n",
+      "* 1 xícara de arroz\n",
+      "* 1 xícara de feijão branco cozido\n",
+      "* 500g de maminha em cubos\n",
+      "* 1 cebola média picada\n",
+      "* 2 tomates picados\n",
+      "* Pimenta do reino a gosto\n",
+      "* Sal a gosto\n",
+      "\n",
+      "**Preparo:**\n",
+      "\n",
+      "1. **Cozinhe o arroz:** Em uma panela média, adicione 2 xícaras de água e o arroz. Tempere com sal e cozinhe em fogo baixo com a panela tampada por cerca de 20 minutos, ou até o arroz ficar macio e a água ser absorvida.\n",
+      "2. **Cozinhe o feijão branco:** Caso o feijão não esteja cozido, cozinhe-o em água fervente até ficar macio. Escorra e reserve.\n",
+      "3. **Prepare a carne:** Tempere a maminha com sal e pimenta do reino a gosto. Numa panela grande e de fundo grosso, doure a carne em fogo alto, em porções, até dourar por todos os lados. Retire a carne da panela e reserve.\n",
+      "4. **Refogue os legumes:** Na mesma panela, adicione a cebola picada e refogue em fogo médio até ficar transparente. Adicione os tomates picados e cozinhe por mais 5 minutos, mexendo ocasionalmente.\n",
+      "5. **Cozinhe o macarrão:** Cozinhe o macarrão em água fervente com sal por cerca de 10 minutos, ou até ficar al dente. Escorra o macarrão e reserve.\n",
+      "6. **Finalize o molho:** Adicione a carne de volta à panela com os legumes. Adicione o feijão branco cozido e o macarrão cozido. Misture tudo com cuidado para não desmanchar o macarrão.\n",
+      "7. **Faça os ovos:** Em uma frigideira antiaderente, adicione um pouco de óleo e aqueça em fogo médio. Quebre os ovos um a um na frigideira, fritando-os do jeito que você preferir: fritos, mexidos ou em omelete.\n",
+      "8. **Sirva:** Distribua o macarrão com a maminha e feijão branco nos pratos. Decore com os ovos fritos e sirva imediatamente.\n",
+      "\n",
+      "**Dicas:**\n",
+      "\n",
+      "* Você pode usar outros tipos de macarrão, como penne ou espaguete, de acordo com a sua preferência.\n",
+      "* Para um sabor mais intenso, adicione um pouco de alho picado junto com a cebola.\n",
+      "* Você pode adicionar outros temperos à carne, como alho em pó, páprica doce ou orégano.\n",
+      "* Ajuste a quantidade de pimenta do reino de acordo com o seu paladar.\n",
+      "\n",
+      "**Bom apetite!**\n",
+      "prompt_token_count: 42\n",
+      "candidates_token_count: 610\n",
+      "total_token_count: 652\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(resposta.text) # Resposta textual\n",
+    "print(resposta.usage_metadata) # Informações como número de tokens usados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como fica perceptível a receita foi impressa de modo completamente geracional, parabéns!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Continuar usando esse link: https://ai.google.dev/gemini-api/docs/get-started/tutorial?lang=python&hl=pt-br\n"
    ]
   }
  ],
