--- a/Extencao/Post_01/01 - Gemini - revisado.ipynb
+++ b/Extencao/Post_01/01 - Gemini - revisado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,72 @@
     "\n",
     "2 - Uma instalação de jupyter para executar o notebook.\n",
     "\n",
-    "3 - Possuir a legunte biblioteca instalada (google-generativeai)\n",
+    "3 - Possuir a seguinte biblioteca instalada (google-generativeai)\n",
     "\n",
     "```bash\n",
     "pip install google-generativeai\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O seguinte modulo ira instalar a biblioteca **google-generativeai** caso a mesma  não esteja instalada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: google-generativeai in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.7.2)\n",
+      "Requirement already satisfied: google-ai-generativelanguage==0.6.6 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (0.6.6)\n",
+      "Requirement already satisfied: google-api-core in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.19.1)\n",
+      "Requirement already satisfied: google-api-python-client in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.137.0)\n",
+      "Requirement already satisfied: google-auth>=2.15.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.32.0)\n",
+      "Requirement already satisfied: protobuf in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (4.25.3)\n",
+      "Requirement already satisfied: pydantic in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.7.1)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (4.66.1)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (4.11.0)\n",
+      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-ai-generativelanguage==0.6.6->google-generativeai) (1.24.0)\n",
+      "Requirement already satisfied: googleapis-common-protos<2.0.dev0,>=1.56.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core->google-generativeai) (1.63.2)\n",
+      "Requirement already satisfied: requests<3.0.0.dev0,>=2.18.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core->google-generativeai) (2.31.0)\n",
+      "Requirement already satisfied: cachetools<6.0,>=2.0.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (5.3.3)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (0.4.0)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (4.9)\n",
+      "Requirement already satisfied: httplib2<1.dev0,>=0.19.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-python-client->google-generativeai) (0.22.0)\n",
+      "Requirement already satisfied: google-auth-httplib2<1.0.0,>=0.2.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-python-client->google-generativeai) (0.2.0)\n",
+      "Requirement already satisfied: uritemplate<5,>=3.0.1 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-python-client->google-generativeai) (4.1.1)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic->google-generativeai) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.18.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic->google-generativeai) (2.18.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from tqdm->google-generativeai) (0.4.6)\n",
+      "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.6->google-generativeai) (1.65.0)\n",
+      "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.6->google-generativeai) (1.62.2)\n",
+      "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httplib2<1.dev0,>=0.19.0->google-api-python-client->google-generativeai) (3.1.1)\n",
+      "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth>=2.15.0->google-generativeai) (0.6.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (2023.7.22)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.1.2 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install google-generativeai"
    ]
   },
   {
@@ -73,13 +134,21 @@
     "\n",
     "2 - Caso ainda não esteja logado, faça o login utilizando sua conta Google e aceite os termos de serviço.\n",
     "\n",
-    "3 - Clique no botão para criar uma chave para um novo projeto.\n",
+    "3 - Clique no botão **Criar chave de API** para criar uma chave para um novo projeto.\n",
     "\n",
-    "4 - Agora você pode copiar a chave.\n",
+    "4 - Nesse momento será exibido uma mensagem com os termos de serviço, basta clicar em **OK** para prosseguir.\n",
+    "\n",
+    "5 - Uma caixa contendo a opção de **Criar uma chave de API em um novo projeto**, Basta clicar para prosseguir.\n",
+    "\n",
+    "6 - Parabéns sua chave de API ja foi gerada basta clicar em copiar para acessá-la.\n",
+    "\n",
+    "---\n",
     "\n",
     "OBS: A chave de API é um elemento crítico para acessar os serviços fornecidos pela Google API. Essa chave funciona como uma senha que autentica suas solicitações e garante que você tenha permissão para acessar os recursos.\n",
     "\n",
-    "Por esse motivo, deve-se prestar muita atenção para que a mesma não fique disponível publicamente."
+    "Por esse motivo, deve-se prestar muita atenção para que a mesma não fique disponível publicamente.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -98,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,13 +177,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Sua chave vai aqui para salva-la\n",
-    "GOOGLE_API_KEY = \"AIzaSyCVzF6VoGIBSIQdpaMb4vnwdlP8oEVu0g0\" "
+    "Primeiramente devemos garantir que a chave da API não fique disponível publicamente, para isso devemos criar um arquivo chamado .env\n",
+    "\n",
+    "1 - Crie um arquivvo chamado .env\n",
+    "\n",
+    "2 - O preencha da seguinte maneira (GOOGLE_API_KEY='Sua chave da API'.\n",
+    ")\n",
+    "\n",
+    "3 - Lembrar de substituir o trecho **Sua chave da API** pela sua chave."
    ]
   },
   {
@@ -123,16 +196,7 @@
    "source": [
     "# Explicação do Código\n",
     "\n",
-    "Este notebook explica o funcionamento de três funções escritas em Python para manipulação de uma chave API, utilizando a biblioteca `python-dotenv` para lidar com variáveis de ambiente em um arquivo `.env`.\n",
-    "\n",
-    "## Função `salva_chave`\n",
-    "\n",
-    "```python\n",
-    "def salva_chave(dotenv_path, chave): # Salva uma chave armazenada em GOOGLE_API_KEY\n",
-    "    # Especifica o caminho completo para o arquivo .env\n",
-    "    dotenv_file = os.path.join(dotenv_path, '.env')\n",
-    "    set_key(dotenv_file, \"GOOGLE_API_KEY\", chave)\n",
-    "    print(f\"Chave API salva em {dotenv_file}\")\n"
+    "Este notebook explica o funcionamento de três funções escritas em Python para manipulação de uma chave API, utilizando a biblioteca `python-dotenv` para lidar com variáveis de ambiente em um arquivo `.env`."
    ]
   },
   {
@@ -140,9 +204,6 @@
    "metadata": {},
    "source": [
     "### Explicação das seguintes funções:\n",
-    "\n",
-    "**salva_chave:**\n",
-    " Objetivo: Esta função salva uma chave API fornecida (chave) no arquivo .env localizado no caminho especificado (dotenv_path).\n",
     "\n",
     "**carrega_chave:**\n",
     " Objetivo: Esta função carrega a chave API armazenada no arquivo .env e configura a biblioteca gemini com essa chave.\n",
@@ -153,16 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def salva_chave(dotenv_path, chave): # Salva uma chave armazenada em GOOGLE_API_KEY\n",
-    "    # Especifica o caminho completo para o arquivo .env\n",
-    "    dotenv_file = os.path.join(dotenv_path, '.env')\n",
-    "    set_key(dotenv_file, \"GOOGLE_API_KEY\", chave)\n",
-    "    print(f\"Chave API salva em {dotenv_file}\")\n",
-    "\n",
     "def carrega_chave(): # Carrega uma chave do arquivo .env\n",
     "    _ = load_dotenv(find_dotenv())\n",
     "    chave = os.getenv(\"GOOGLE_API_KEY\")\n",
@@ -177,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -214,12 +269,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primeiramente devemos verificar quais são todos os modelos disponíveis para utilização.\n"
+    "### Verificando modelos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primeiramente devemos verificar quais são todos os modelos disponíveis para utilização dsiponibilizados pelo **Google Gemini**.\n",
+    "\n",
+    "Para isso basta utilizar o seguinte comando parea receber a lista com os modelos existentes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelos = client.get_default_model_client().list_models()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora a variável **modelos** contém uma lista contendo todos os modelos existentes.\n",
+    "\n",
+    "Para listar apenas os modelos generativos, utilize um loop `for` para filtrar os dados em que `model.supported_generation_methods` seja igual a `'generateContent'` como demonstra o código a seguir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -242,20 +324,31 @@
     }
    ],
    "source": [
-    "# Listar modelos \n",
-    "modelos = client.get_default_model_client().list_models()\n",
-    "\n",
-    "for m in modelos:\n",
-    "    if 'generateContent' in m.supported_generation_methods:\n",
-    "        print(m.name)\n"
+    "for model in modelos:\n",
+    "    if 'generateContent' in model.supported_generation_methods:\n",
+    "        print(model.name)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tendo en vista que todos os modelos pro como o **gemini-1.5-pro**\n",
-    "Para o teste inicial utilizaremos o seguinte modelo **gemini-1.5-flash** tendo em vista que o esse modelo é **\"Gratuito\"** já que para que precisemos pagar é necessária uma utilização maior que os demais."
+    "---\n",
+    "\n",
+    "Principalmente podemos trabalhar com os modelos mais atualizados sendo eles:\n",
+    "\n",
+    "gemini-1.5-flash - Sendo o melhor custo benefício. **Será utilizado nesta publicação**\n",
+    "\n",
+    "gemini-1.5-pro - Sendo o melhor modelo.\n",
+    "\n",
+    "Como chegam a essas conclusões estará disponível em uma publicação futura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primeiros passos com o modelo"
    ]
   },
   {
@@ -268,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
