--- a/Extencao/Post_01/01 - Gemini - revisado.ipynb
+++ b/Extencao/Post_01/01 - Gemini - revisado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,54 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: google-generativeai in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.7.2)\n",
-      "Requirement already satisfied: google-ai-generativelanguage==0.6.6 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (0.6.6)\n",
-      "Requirement already satisfied: google-api-core in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.19.1)\n",
-      "Requirement already satisfied: google-api-python-client in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.137.0)\n",
-      "Requirement already satisfied: google-auth>=2.15.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.32.0)\n",
-      "Requirement already satisfied: protobuf in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (4.25.3)\n",
-      "Requirement already satisfied: pydantic in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (2.7.1)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (4.66.1)\n",
-      "Requirement already satisfied: typing-extensions in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-generativeai) (4.11.0)\n",
-      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-ai-generativelanguage==0.6.6->google-generativeai) (1.24.0)\n",
-      "Requirement already satisfied: googleapis-common-protos<2.0.dev0,>=1.56.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core->google-generativeai) (1.63.2)\n",
-      "Requirement already satisfied: requests<3.0.0.dev0,>=2.18.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core->google-generativeai) (2.31.0)\n",
-      "Requirement already satisfied: cachetools<6.0,>=2.0.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (5.3.3)\n",
-      "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (0.4.0)\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (4.9)\n",
-      "Requirement already satisfied: httplib2<1.dev0,>=0.19.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-python-client->google-generativeai) (0.22.0)\n",
-      "Requirement already satisfied: google-auth-httplib2<1.0.0,>=0.2.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-python-client->google-generativeai) (0.2.0)\n",
-      "Requirement already satisfied: uritemplate<5,>=3.0.1 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-python-client->google-generativeai) (4.1.1)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic->google-generativeai) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.18.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pydantic->google-generativeai) (2.18.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from tqdm->google-generativeai) (0.4.6)\n",
-      "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.6->google-generativeai) (1.65.0)\n",
-      "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.6->google-generativeai) (1.62.2)\n",
-      "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from httplib2<1.dev0,>=0.19.0->google-api-python-client->google-generativeai) (3.1.1)\n",
-      "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth>=2.15.0->google-generativeai) (0.6.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\vinic\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (2023.7.22)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.1.2 -> 24.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install google-generativeai"
    ]
@@ -167,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,17 +328,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesse caso vou perguntar **\"Se você pudesse ter qualquer superpoder por um dia, qual seria e como você o usaria?\"**"
+    "Nesse caso vou solicitar **\"faça um resumo em uma linha de:\"** a função **statistics.median_high** do python\n",
+    "\n",
+    "A fonte desse trecho é da documentação oficial do python: [Documentação do Python: statistics.median_high](https://docs.python.org/pt-br/3/library/statistics.html#statistics.median_high)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Recebendo nossa primeira mensagem via código\n",
-    "resposta = model.generate_content(\"Se você pudesse ter qualquer superpoder por um dia, qual seria e como você o usaria?\")"
+    "resposta = model.generate_content(\"faça um resumo em uma linha de: statistics.median_high(data) Retorna a mediana superior de dados numéricos. Se data for vazio, a exceção StatisticsError é levantada. data pode ser uma sequência ou um iterável. A mediana superior sempre é um membro do conjunto de dados. Quando o número de elementos for ímpar, o valor intermediário é retornado. Se houver um número par de elementos, o maior entre os dois valores centrais é retornado.\")"
    ]
   },
   {
@@ -395,30 +352,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se eu pudesse ter um superpoder por um dia, eu escolheria a capacidade de teletransportar qualquer coisa para qualquer lugar. \n",
+      "`statistics.median_high(data)` retorna o maior dos dois valores do meio de um conjunto de dados, ou o valor do meio se o conjunto tiver um número ímpar de elementos. \n",
       "\n",
-      "Eu usaria essa habilidade para:\n",
-      "\n",
-      "* **Resolver crises globais:** Teletransportar recursos e ajuda para áreas atingidas por desastres naturais, crises humanitárias ou conflitos. \n",
-      "* **Fazer o bem:** Teletransportar alimentos para pessoas famintas, água para regiões secas e medicamentos para quem precisa. \n",
-      "* **Resolver problemas logísticos:** Teletransportar materiais de construção para locais de difícil acesso, ferramentas para equipes de reparo e peças para máquinas complexas.\n",
-      "* **Incentivar a exploração:** Teletransportar cientistas e pesquisadores para locais de estudo remotos, facilitando a pesquisa e o estudo de áreas inexploradas.\n",
-      "* **Criar momentos especiais:** Teletransportar pessoas para lugares incríveis, como paisagens naturais deslumbrantes, eventos culturais únicos ou encontros com amigos e familiares que estão distantes.\n",
-      "\n",
-      "Apesar de ser um superpoder incrível, eu o usaria com responsabilidade e ética, priorizando sempre o bem-estar da humanidade e a preservação do planeta. \n",
-      "\n",
-      "É importante lembrar que eu sou um modelo de linguagem, e não possuo a capacidade de sentir emoções ou ter desejos pessoais. A escolha de usar o teletransporte para o bem foi baseada em meus conhecimentos e na minha capacidade de analisar e processar informações. \n",
-      "\n",
-      "prompt_token_count: 21\n",
-      "candidates_token_count: 300\n",
-      "total_token_count: 321\n",
+      "prompt_token_count: 102\n",
+      "candidates_token_count: 39\n",
+      "total_token_count: 141\n",
       "\n"
      ]
     }
@@ -828,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
