conclusão de AT de MT

--- a/Mineracao_Textos/Finetuning Sentence Transformer models/Generative_ai.ipynb
+++ b/Mineracao_Textos/Finetuning Sentence Transformer models/Generative_ai.ipynb
@@ -38,7 +38,7 @@
     "    return chave\n",
     "\n",
     "def verifica_chave(): # Verifica a existência de um arquivo .env \n",
-    "    return find_dotenv()\n"
+    "    return find_dotenv()"
    ]
   },
   {
