Update 01 - Gemini - revisado.ipynb

--- a/Extencao/Post_01/01 - Gemini - revisado.ipynb
+++ b/Extencao/Post_01/01 - Gemini - revisado.ipynb
@@ -71,15 +71,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install google-generativeai"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv, set_key, find_dotenv\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
     "import google.generativeai as gemini\n",
     "import google.generativeai.client as client"
    ]
@@ -268,6 +259,7 @@
       "models/gemini-1.5-pro-latest\n",
       "models/gemini-1.5-pro-001\n",
       "models/gemini-1.5-pro\n",
+      "models/gemini-1.5-pro-exp-0801\n",
       "models/gemini-1.5-flash-latest\n",
       "models/gemini-1.5-flash-001\n",
       "models/gemini-1.5-flash\n"
@@ -293,6 +285,24 @@
     "gemini-1.5-pro - Sendo o melhor modelo.\n",
     "\n",
     "Como chegam a essas conclusões estará disponível em uma publicação futura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testes\n",
+    "\n",
+    "Caso queira testar a capacidade de todas as versões possíveis, você pode ainda conectado a sua conta entrar em [Google AI Studio](https://aistudio.google.com/) e testar!\n",
+    "\n",
+    "Nesse ambiente você pode selecionar e utilizar das mais diferentes versões existentes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Valendo também citar que a versão 2 do gemini em formato de **Preview**"
    ]
   },
   {
@@ -355,11 +365,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "`statistics.median_high(data)` retorna o maior dos dois valores do meio de um conjunto de dados, ou o valor do meio se o conjunto tiver um número ímpar de elementos. \n",
+      "`statistics.median_high(data)` retorna o maior dos dois valores do meio de um conjunto de dados, ou o valor do meio se o conjunto de dados tiver um número ímpar de elementos. \n",
       "\n",
       "prompt_token_count: 102\n",
-      "candidates_token_count: 39\n",
-      "total_token_count: 141\n",
+      "candidates_token_count: 41\n",
+      "total_token_count: 143\n",
       "\n"
      ]
     }
@@ -380,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,42 +435,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## Picanha e Maminha ao Vinho com Alho\n",
+      "## Moqueca de Picanha com Cuscuz Marroquino e Salada Fresca\n",
       "\n",
       "**Ingredientes:**\n",
       "\n",
-      "* 500g de picanha (ou maminha) em peça única\n",
-      "* 1 xícara de vinho tinto seco (use um vinho que você gosta de beber)\n",
-      "* 4 dentes de alho picados\n",
+      "* 1 kg de picanha em cubos\n",
+      "* 1 cebola grande picada\n",
+      "* 4 dentes de alho amassados\n",
+      "* 2 colheres de sopa de azeite de oliva\n",
+      "* 1 xícara de tomate picado\n",
+      "* 1 xícara de caldo de carne\n",
+      "* 1/2 xícara de coentro picado\n",
+      "* 1/4 xícara de cebolinha picada\n",
+      "* Sal e pimenta do reino a gosto\n",
+      "\n",
+      "**Para o Cuscuz Marroquino:**\n",
+      "\n",
+      "* 1 xícara de cuscuz marroquino\n",
+      "* 1 xícara de caldo de legumes fervente\n",
+      "* 1/4 xícara de ervilha fresca ou congelada\n",
+      "* 1/4 xícara de milho verde em grãos\n",
+      "* 1/4 xícara de cebolinha picada\n",
+      "\n",
+      "**Para a Salada:**\n",
+      "\n",
+      "* 1 xícara de arroz cozido\n",
+      "* 1/2 xícara de macarrão cozido\n",
+      "* 1/2 xícara de tomate picado\n",
+      "* 1/4 xícara de cebola picada\n",
+      "* 1/4 xícara de coentro picado\n",
+      "* 1/4 xícara de cebolinha picada\n",
+      "* 1/4 xícara de azeite de oliva\n",
+      "* Sal e pimenta do reino a gosto\n",
       "\n",
       "**Preparo:**\n",
       "\n",
-      "1. **Marinar:** Em um recipiente fundo, misture o vinho tinto e o alho picado. Adicione a picanha (ou maminha) e deixe marinar na geladeira por pelo menos 2 horas, virando a peça de carne na marinada de vez em quando.\n",
-      "2. **Assar:** Pré-aqueça o forno a 200°C. Retire a carne da marinada e reserve. Descarte a marinada.\n",
-      "3. **Grelhar:** Aqueça uma panela de ferro em fogo alto. Grelhe a carne por 3-4 minutos de cada lado, até dourar.\n",
-      "4. **Assar:** Transfira a carne para uma assadeira. Asse por 15-20 minutos, ou até atingir o ponto desejado (para um ponto médio, a temperatura interna deve estar entre 54°C e 60°C).\n",
-      "5. **Descansar:** Retire a carne do forno e deixe descansar por 10 minutos antes de fatiar.\n",
+      "**Moqueca:**\n",
+      "\n",
+      "1. Tempere a picanha com sal e pimenta do reino.\n",
+      "2. Em uma panela de fundo grosso, aqueça o azeite de oliva e doure a cebola e o alho.\n",
+      "3. Adicione a picanha e cozinhe por cerca de 5 minutos, ou até dourar.\n",
+      "4. Acrescente o tomate picado, o caldo de carne, o coentro e a cebolinha.\n",
+      "5. Cozinhe em fogo baixo por cerca de 30 minutos, ou até a picanha ficar macia.\n",
+      "\n",
+      "**Cuscuz Marroquino:**\n",
+      "\n",
+      "1. Coloque o cuscuz em uma tigela e despeje o caldo de legumes fervente sobre ele.\n",
+      "2. Tampe a tigela e deixe descansar por 5 minutos.\n",
+      "3. Solte o cuscuz com um garfo e misture a ervilha, o milho e a cebolinha.\n",
+      "\n",
+      "**Salada:**\n",
+      "\n",
+      "1. Misture o arroz cozido, o macarrão cozido, o tomate, a cebola, o coentro, a cebolinha, o azeite de oliva, o sal e a pimenta do reino.\n",
+      "\n",
+      "**Montagem:**\n",
+      "\n",
+      "1. Sirva a moqueca de picanha com o cuscuz marroquino e a salada fresca.\n",
+      "2. Decore com mais coentro e cebolinha a gosto.\n",
       "\n",
       "**Dicas:**\n",
       "\n",
-      "* Para um sabor mais intenso, adicione um ramo de alecrim fresco à marinada.\n",
-      "* Para um acompanhamento simples, sirva a carne com batatas assadas ou salada verde.\n",
-      "* Se preferir, pode usar a marinada para fazer um molho para acompanhar a carne, reduzindo-a em fogo baixo até engrossar.\n",
+      "* Para um sabor mais intenso, adicione um pouco de açafrão à moqueca.\n",
+      "* Para uma versão mais leve, use frango em vez de picanha.\n",
+      "* Use um molho de tomate caseiro para um sabor ainda melhor.\n",
+      "* Experimente usar outros legumes na salada, como cenoura ralada ou pepino picado.\n",
       "\n",
-      "**Tempo de preparo:** 2 horas e 30 minutos (incluindo o tempo de marinada)\n",
-      "**Rendimento:** 2 porções\n",
-      "\n",
-      "**Observações:**\n",
-      "\n",
-      "* Ajuste o tempo de cozimento de acordo com o ponto desejado da carne.\n",
-      "* Utilize um termômetro de carne para garantir o cozimento correto.\n",
-      "* Sirva a carne fatiada, com o molho (opcional) e acompanhamentos de sua preferência.\n",
-      "\n",
-      "**Bom apetite!** \n",
-      "\n",
-      "prompt_token_count: 30\n",
-      "candidates_token_count: 469\n",
-      "total_token_count: 499\n",
+      "**Bom apetite!**\n",
+      "prompt_token_count: 54\n",
+      "candidates_token_count: 654\n",
+      "total_token_count: 708\n",
       "\n"
      ]
     }
@@ -519,7 +562,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImagens\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124manimal.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m img\n",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImagens\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124manimal.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m img\n",
       "\u001b[1;31mNameError\u001b[0m: name 'Image' is not defined"
      ]
     }
