--- a/Processamento_imagens/projeto bolado/principal_algoritimo.ipynb
+++ b/Processamento_imagens/projeto bolado/principal_algoritimo.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "script_dir = os.getcwd() # coleata o diretorio do projeto atual\n",
+    "script_dir = os.getcwd()\n",
     "sys.path.append(script_dir)"
    ]
   },
@@ -615,7 +615,7 @@
     "plt.legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
