--- a/pasta_pessoal/nao_sei_oque_faz_aqui/opa.ipynb
+++ b/pasta_pessoal/nao_sei_oque_faz_aqui/opa.ipynb
@@ -2,70 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entrada = 'mamaco'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n",
-      "13\n",
-      "15\n",
-      "17\n",
-      "19\n",
-      "21\n",
-      "23\n",
-      "25\n",
-      "27\n",
-      "29\n",
-      "31\n",
-      "33\n",
-      "35\n",
-      "37\n",
-      "39\n",
-      "41\n",
-      "43\n",
-      "45\n",
-      "47\n",
-      "49\n",
-      "51\n",
-      "53\n",
-      "55\n",
-      "57\n",
-      "59\n",
-      "61\n",
-      "63\n",
-      "65\n",
-      "67\n",
-      "69\n",
-      "71\n",
-      "73\n",
-      "75\n",
-      "77\n",
-      "79\n",
-      "81\n",
-      "83\n",
-      "85\n",
-      "87\n",
-      "89\n",
-      "91\n",
-      "93\n",
-      "95\n",
-      "97\n",
-      "99\n"
-     ]
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(1, 101, 2):\n",
-    "    \n",
-    "    print(i)"
+    "alpha = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+    "len(alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'131131315'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def cripto(entrada, alpha : list):\n",
+    "    lista_pika = [x for x in entrada]\n",
+    "    saida = ''\n",
+    "\n",
+    "    for item in lista_pika:\n",
+    "        saida = saida + str(alpha.index(item) + 1)\n",
+    "    return saida\n",
+    "\n",
+    "cripto(entrada, alpha)"
    ]
   }
  ],
@@ -85,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
