Sistema do jogo da velha concluido

--- a/pasta_pessoal/nao_sei_oque_faz_aqui/opa.ipynb
+++ b/pasta_pessoal/nao_sei_oque_faz_aqui/opa.ipynb
@@ -57,6 +57,27 @@
     "\n",
     "cripto(entrada, alpha)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 8]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c =  [x * 2 for x in range(2,5)]\n",
+    "c"
+   ]
   }
  ],
  "metadata": {
@@ -75,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
