--- a/pasta_pessoal/nao_sei_oque_faz_aqui/opa.ipynb
+++ b/pasta_pessoal/nao_sei_oque_faz_aqui/opa.ipynb
@@ -60,23 +60,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4, 6, 8]"
+       "[50,\n",
+       " 52,\n",
+       " 54,\n",
+       " 56,\n",
+       " 58,\n",
+       " 60,\n",
+       " 62,\n",
+       " 64,\n",
+       " 66,\n",
+       " 68,\n",
+       " 70,\n",
+       " 72,\n",
+       " 74,\n",
+       " 76,\n",
+       " 78,\n",
+       " 80,\n",
+       " 82,\n",
+       " 84,\n",
+       " 86,\n",
+       " 88,\n",
+       " 90,\n",
+       " 92,\n",
+       " 94,\n",
+       " 96,\n",
+       " 98,\n",
+       " 100]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c =  [x * 2 for x in range(2,5)]\n",
+    "c = [x for x in range(1,101) if x >= 50 and x%2 == 0]\n",
     "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = [1,2,3,-5,-5,-5,-5,-5]\n",
+    "len([x for x in c if x>= 0])"
    ]
   }
  ],
